--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name"keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
 </head>
 <body>
-    
+    <header>Header</header>
+    <main>Main Content</main>
+    <footer>Footer</footer>
 </body>
 </html>
