--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
-    <meta name"keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -27,6 +27,12 @@
         </nav>
         </header>
     <main>Main Content</main>
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="vist our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/8f23e6b2b5.js" crossorigin="anonymous"></script>
 </body>
 </html>
