--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
@@ -29,7 +29,26 @@
     <main>Main Content</main>
     <footer>
         <ul>
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="vist our facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="vist our facebook page (opens in new tab)">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in new tab)">
+                    <i class="fa-brands fa-square-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="vist our youtube page (opens in new tab)">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="vist our instagram page (opens in new tab)">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
         </ul>
     </footer>
 
