--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
     <main>Main Content</main>
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="vist our facebook page (opens in new tab)">
                     <i class="fa-brands fa-facebook"></i>
