make reason section responsive

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <section id="reasons">
         <h2>Why Love Running with us?</h2>
-        <div id=""benefits>
+        <div id="benefits">
             <div id="benefits-physical">
                 <div>
                     <h3>FEEL HEALTHY <i class="fa-solid fa-heartbeat"></i></h3>
@@ -67,7 +67,6 @@
             </div>
         </div>
     </section>
-
 
     <footer>
         <ul id="social-networks">
