hide meetup times text

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
 
         <section id="meetups">
-            <h2>Mean-ups Times</h2>
+            <h2 class="hidden-heading">Mean-ups Times</h2>
             </section>
         <div id="times">
             <div>
