--- a/signup.html
+++ b/signup.html
@@ -26,7 +26,39 @@
             </ul>
         </nav>
         </header>
-    <main>Main Content</main>
+    <main>
+        <section id="signup">  
+            <form id="signup-form" action="https://formdump.codeinstitute.net" method="post">
+                <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
+
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" class="input-text" name="firstname" class="text-input" required>
+                    <br>
+                    <label for="lname">Last Name</label>
+                    <input type="pext" id="lname" class="input-text" name="lastname" class="text-input" required>
+                    <br>
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" class="input-text" name="email" class="text-input" required>
+                    <br>
+
+                <div class="radio-button">
+                    <label for="road">Road</label>
+                    <input type="radio" id="road" name="running_preference" value="road" required checked>
+                </div>
+                <div class="radio-button">
+                    <label for="trail">Trail</label>
+                    <input type="radio" id="trail" name="running_preference" value="trail" required>
+                </div>
+                <div class="radio-button">
+                    <label for="both">Both</label>
+                    <input type="radio" id="both" name="running_preference" value="both" required>
+                </div>
+                <div>
+                    <button type="submit" class="join-button">Let's Run!</button>
+                </div>
+            </form>
+        </section>
+    </main>
     <footer>
         <ul id="social-networks">
             <li>
