--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,9 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
@@ -25,20 +27,20 @@
                 <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
-        </header>
+    </header>
     <main>
         <section id="signup">  
-            <form id="signup-form" action="https://formdump.codeinstitute.net" method="post">
+            <form id="signup-form" action="https://formdump.codeinstitute.net" method="POST">
                 <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
 
                     <label for="fname">First Name</label>
-                    <input type="text" id="fname" class="input-text" name="firstname" class="text-input" required>
+                    <input type="text" id="fname" class="text-input" name="firstname" class="text-input" required>
                     <br>
                     <label for="lname">Last Name</label>
-                    <input type="pext" id="lname" class="input-text" name="lastname" class="text-input" required>
+                    <input type="pext" id="lname" class="text-input" name="lastname" class="text-input" required>
                     <br>
                     <label for="email">Email Address</label>
-                    <input type="email" id="email" class="input-text" name="email" class="text-input" required>
+                    <input type="email" id="email" class="text-input" name="email" class="text-input" required>
                     <br>
 
                 <div class="radio-button">
