--- a/signup.html
+++ b/signup.html
@@ -34,13 +34,13 @@
                 <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
 
                     <label for="fname">First Name</label>
-                    <input type="text" id="fname" class="text-input" name="firstname" class="text-input" required>
+                    <input type="text" id="fname" class="text-input" name="firstname" required>
                     <br>
                     <label for="lname">Last Name</label>
-                    <input type="pext" id="lname" class="text-input" name="lastname" class="text-input" required>
+                    <input type="text" id="lname" class="text-input" name="lastname" required>
                     <br>
                     <label for="email">Email Address</label>
-                    <input type="email" id="email" class="text-input" name="email" class="text-input" required>
+                    <input type="email" id="email" class="text-input" name="email" required>
                     <br>
 
                 <div class="radio-button">
